projects/medusa-monorepo/my-medusa-storefront/k8s-manifests/medusa.xuperson.org/medusa-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: medusa
  labels:
    name: medusa
    app: medusa
