projects/medusa-monorepo/my-medusa-storefront/k8s-manifests/medusa.xuperson.org/medusa-storefront-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medusa-storefront
  namespace: medusa
  labels:
    app: medusa-storefront
spec:
  type: ClusterIP
  selector:
    app: medusa-storefront
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
